# KernelClaw-

.openclaw/: workspace-state.json
kernelclaw/: .gitignore  Cargo.toml  LICENSE  README.md  policy.yaml
kernelclaw/docs/: AUDIT_TABLE.md  IMPROVEMENT_REPORT.md  METADATA_ANALYSIS.md  RESEARCH_ARC.md
kernelclaw/kernel-cli/: Cargo.toml
kernelclaw/kernel-cli/src/: main.rs
kernelclaw/kernel-core/: Cargo.toml
kernelclaw/kernel-core/src/: graph.rs  lib.rs  proposal.rs
kernelclaw/kernel-crypto/: Cargo.toml
kernelclaw/kernel-crypto/src/: lib.rs
kernelclaw/kernel-daemon/: Cargo.toml
kernelclaw/kernel-daemon/src/: lib.rs
kernelclaw/kernel-exec/: Cargo.toml
kernelclaw/kernel-exec/src/: lib.rs  tools.rs  wasm_runtime.rs
kernelclaw/kernel-llm/: Cargo.toml
kernelclaw/kernel-llm/src/: lib.rs
kernelclaw/kernel-memory/: Cargo.toml
kernelclaw/kernel-memory/src/: lib.rs
kernelclaw/kernel-notify/: Cargo.toml
kernelclaw/kernel-notify/src/: lib.rs
kernelclaw/kernel-policy/: Cargo.toml
kernelclaw/kernel-policy/src/: lib.rs
kernelclaw/kernel-zero/: Cargo.toml  README.md
kernelclaw/kernel-zero-async/: Cargo.toml
kernelclaw/kernel-zero-async/src/: lib.rs
kernelclaw/kernel-zero-derive/: Cargo.toml
kernelclaw/kernel-zero-derive/src/: lib.rs
kernelclaw/kernel-zero-dirs/: Cargo.toml
kernelclaw/kernel-zero-dirs/src/: lib.rs
kernelclaw/kernel-zero-ed25519/: Cargo.toml
kernelclaw/kernel-zero-ed25519/src/: lib.rs
kernelclaw/kernel-zero-json/: Cargo.toml
kernelclaw/kernel-zero-json/src/: lib.rs
kernelclaw/kernel-zero-runtime/: Cargo.toml
kernelclaw/kernel-zero-runtime/src/: lib.rs
kernelclaw/kernel-zero-serde/: Cargo.toml
kernelclaw/kernel-zero-serde-derive/: Cargo.toml
kernelclaw/kernel-zero-serde-derive/src/: lib.rs
kernelclaw/kernel-zero-serde/src/: lib.rs
kernelclaw/kernel-zero-tokio/: Cargo.toml
kernelclaw/kernel-zero-tokio/src/: lib.rs
kernelclaw/kernel-zero-yaml/: Cargo.toml
kernelclaw/kernel-zero-yaml/src/: lib.rs
kernelclaw/kernel-zero/src/: ed25519.rs  error.rs  id.rs  lib.rs  sha256.rs  time.rs  toml.rs
kernelclaw/tests/: integration.rs
kernelclaw/tools/: graph-viz.html  ollama-bridge.mjs  start-bridge.sh
memory/: 2026-04-10.md
