[workspace]
resolver = "2"
members = [
    "kernel-daemon",
    "kernel-core",
    "kernel-memory", 
    "kernel-exec",
    "kernel-llm",
    "kernel-policy",
    "kernel-crypto",
    "kernel-notify",
    "kernel-cli",
]

[workspace.package]
version = "0.1.4"
edition = "2024"
license = "MIT OR Apache-2.0"

# MINIMAL core dependencies
[workspace.dependencies]
# Serialization (required for YAML policy + receipts)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Async runtime (required for network)
tokio = { version = "1", features = ["rt", "sync"] }

# Crypto (required for receipts)
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
dirs = "5"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
# Static runtime for truly static binary
panic = "abort"