[package]
name = "kernel-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "kernelclaw"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["derive", "env"] }
dirs.workspace = true

kernel-core = { path = "../kernel-core" }