[package]
name = "kernel-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
sha2.workspace = true
base64.workspace = true
chrono.workspace = true
uuid.workspace = true
