[package]
name = "kernel-exec"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
wasmtime.workspace = true

kernel-policy = { path = "../kernel-policy" }
kernel-crypto = { path = "../kernel-crypto" }
