[package]
name = "kernel-memory"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sled.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
kernel-crypto = { path = "../kernel-crypto" }
